start to use vector intrinsics