@@ -32,6 +32,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.0</version>
                 <configuration>
+                    <compilerArgs>
+                        <arg>--add-modules</arg><arg>jdk.incubator.vector</arg>
+                    </compilerArgs>
                     <verbose>true</verbose>
                     <fork>true</fork>
                     <source>${maven.compiler.source}</source>
@@ -40,6 +43,15 @@
                     <failOnError>true</failOnError>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.21.0</version>
+                <configuration>
+                    <argLine>--add-modules jdk.incubator.vector</argLine>
                 </configuration>
             </plugin>
         </plugins>
